--- a/ansible-playbooks/install_prometheus.yaml
+++ b/ansible-playbooks/install_prometheus.yaml
@@ -2,10 +2,41 @@
 - hosts: kube_master
   tasks:
 
-    - name: Install docker
+    - name: Remove previous docker versions if exists
       become: true
       shell: |
-        apt install apt-transport-https ca-certificates curl software-properties-common && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add - && add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu bionic stable" && apt update && apt-cache policy docker-ce && apt install docker-ce && systemctl enable docker && systemctl status docker        
+        apt-get remove docker docker-engine docker.io containerd runc -y
+
+    - name: Install essential Docker packages
+      become: true
+      shell: |
+        apt-mark hold google-cloud-sdk && sudo apt-get install apt-transport-https ca-certificates curl gnupg-agent software-properties-common -y 
+
+    - name: Add Dockerfile's official GPG key
+      become: true
+      shell: |
+        curl -fsSL https://download.docker.com/linux/ubuntu/gpg | sudo apt-key add -  
+
+    - name: Add Docker paackage to apt repository
+      become: true
+      shell: |
+        add-apt-repository "deb [arch=amd64] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" 
+
+    - name: Update the repository
+      become: true
+      shell: |
+        apt-mark hold google-cloud-sdk && apt-get update -y 
+
+    - name: Install the Docker
+      become: true
+      shell: |
+        apt-get install docker-ce docker-ce-cli containerd.io -y
+
+    - name: Restasrt and Enable docker 
+      become: true
+      shell: |
+        systemctl restart docker && systemctl enable docker 
+
 
     - name: Create /opt/docker/prommetheus
       become: true
