--- a/ansible-playbooks/install_prometheus.yaml
+++ b/ansible-playbooks/install_prometheus.yaml
@@ -46,4 +46,4 @@
     - name: Spin up the Docker Prometheus container
       become: true
       shell: |
-        docker run -it -d --name prometheus -p 9090:9090 -v /opt/docker/prometheus:/etc/prometheus prom/prometheus --config.file=/etc/prometheus/prometheus.yml
+        docker stop prometheus && docker rm prometheus && docker run -it -d --name prometheus -p 9090:9090 -v /opt/docker/prometheus:/etc/prometheus prom/prometheus --config.file=/etc/prometheus/prometheus.yml
