--- a/ansible-playbooks/install_node_exporter.yaml
+++ b/ansible-playbooks/install_node_exporter.yaml
@@ -27,3 +27,6 @@
         kill -9 $(sudo lsof -t -i:9100)
         ./node_exporter &
         echo "done"
+      register: outp
+
+    - debug: msg="{{ outp.stdout }}"        
