--- a/ansible-playbooks/install_node_exporter.yaml
+++ b/ansible-playbooks/install_node_exporter.yaml
@@ -28,4 +28,4 @@
         ./node_exporter
       register: outp
 
-    - debug: msg="{{ outp.stdout }}"        
+    - debug: msg="{{ outp.stderr }}"        
