--- a/ansible-playbooks/install_node_exporter2.yaml
+++ b/ansible-playbooks/install_node_exporter2.yaml
@@ -1,11 +1,9 @@
 ---
 - hosts: all
-  remote_user: ubuntu
+  become: true
   vars:
     node_exporter_version: 0.14.0
   tasks:
-    - name: test connection
-      ping:
     - name: create group
       group:
         name: prometheus
