--- a/ansible-playbooks/install_node_exporter2.yaml
+++ b/ansible-playbooks/install_node_exporter2.yaml
@@ -15,10 +15,7 @@
         createhome: no
         system: yes
         state: present
-    - name: create opt directory for prometheus
-      file:
-        path: /opt/prometheus
-        state: directory
+
     - name: download node exporter
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz
@@ -28,16 +25,18 @@
         remote_src: yes
         src: /opt/prometheus/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz
         dest: /opt/prometheus
-    - name: create symlink to node exporter
+    - name: Create a symlink to node exporter
       file:
         path: /usr/bin/node_exporter
         state: link
         src: /opt/prometheus/node_exporter-{{ node_exporter_version }}.linux-amd64/node_exporter
-    - name: install unit file to systemd
+
+    - name: Install unit file to systemd
       template:
         src: node_exporter.service
         dest: /etc/systemd/system/node_exporter.service
-    - name: configure systemd to use service
+
+    - name: Configure systemd to use service
       systemd:
         daemon_reload: yes
         enabled: yes
