--- a/ansible-playbooks/install_grafana.yaml
+++ b/ansible-playbooks/install_grafana.yaml
@@ -1,13 +1,7 @@
 ---
 - hosts: kube_master
   tasks:
-
-    - name: Check docker installed
+    - name: Install Grafana Docker
       become: true
       shell: |
-        systemctl status docker
-
-    - name: Docker install Grafana
-      become: true
-      shell: |
-        docker run 
+        docker run -it -d --name grafana -p 80:3000 grafana/grafana
