--- a/ansible-playbooks/install_grafana.yaml
+++ b/ansible-playbooks/install_grafana.yaml
@@ -4,4 +4,6 @@
     - name: Install Grafana Docker
       become: true
       shell: |
+        docker stop grafana
+        docker rm grafana
         docker run -it -d --name grafana -p 80:3000 grafana/grafana
