--- a/ansible-playbooks/node_exporter/install_node_exporter.yaml
+++ b/ansible-playbooks/node_exporter/install_node_exporter.yaml
@@ -16,6 +16,11 @@
         system: yes
         state: present
 
+    - name: Create opt/prometheus to unarchive node_exporter binary
+      file:
+        path: /opt/prometheus
+        state: directory        
+
     - name: download node exporter
       get_url:
         url: https://github.com/prometheus/node_exporter/releases/download/v{{ node_exporter_version }}/node_exporter-{{ node_exporter_version }}.linux-amd64.tar.gz
