--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -35,7 +35,7 @@ prerequisites-install:
   script:
     - echo "hi"
     # - sudo yum update -y && sudo yum install wget unzip -y
-    - yum update -y && sudo yum install wget unzip -y
+    - yum update --exclude=google-cloud-sdk -y && sudo yum install wget unzip -y
   tags:
     - banuka-gcp
 
