Addes resource_group: to make jobs wait for other jobs in parallel scenario

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
 
 create-ssh-key-pair:
   stage: PREREQUISITES
+  resource_group: prerequisites
   script:
     - pwd
     - mkdir -p ~/.ssh
@@ -27,6 +28,7 @@ create-ssh-key-pair:
 
 prerequisites-install:
   stage: PREREQUISITES
+  resource_group: prerequisites
   script:
     - echo "hi"
     # - sudo yum update -y && sudo yum install wget unzip -y
@@ -36,6 +38,7 @@ prerequisites-install:
 
 install_terraform:
   stage: PREREQUISITES
+  resource_group: prerequisites
   script:
     - export VER="0.13.0-beta3"
     - wget https://releases.hashicorp.com/terraform/${VER}/terraform_${VER}_linux_amd64.zip
@@ -49,6 +52,7 @@ install_terraform:
 
 deploy:
   stage: BUILD-INFRASTRUCTURE
+  resource_group: build
   script:
     - echo "" > ~/.ssh/known_hosts
     - terraform init
@@ -59,6 +63,7 @@ deploy:
 
 restart-sshd:
   stage: BUILD-INFRASTRUCTURE
+  resource_group: build
   script:
     - pwd
     - export ANSIBLE_HOST_KEY_CHECKING=False
@@ -81,6 +86,7 @@ restart-sshd:
 
 test-ansible:
   stage: CONFIG-ANSIBLE
+  resource_group: ansible
   retry:
     max: 2
     when:
@@ -95,6 +101,7 @@ test-ansible:
 
 ansible-playbooks:
   stage: CONFIG-ANSIBLE
+  resource_group: ansible
   retry:
     max: 2
     when:
@@ -111,6 +118,7 @@ ansible-playbooks:
 
 install-node-exporter:
   stage: MONITORING
+  resource_group: monitoring
   script:
     - ansible-playbook ./ansible-playbooks/node_exporter/install_node_exporter.yaml
   tags:
@@ -118,6 +126,7 @@ install-node-exporter:
 
 install-prometheus:
   stage: MONITORING
+  resource_group: monitoring
   script:
     - echo "Installing Prometheus"
     - ansible-playbook ./ansible-playbooks/prometheus/install_prometheus.yaml
@@ -126,6 +135,7 @@ install-prometheus:
 
 install-grafana:
   stage: MONITORING
+  resource_group: monitoring
   script:
     - ansible-playbook ./ansible-playbooks/grafana/install_grafana.yaml
   tags:
