--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,7 @@ stages:
 
 create-ssh-key-pair:
   stage: PREREQUISITES
+  resource_group: prerequisites
   script:
     - pwd
     - mkdir -p ~/.ssh
@@ -27,8 +28,7 @@ create-ssh-key-pair:
 
 prerequisites-install:
   stage: PREREQUISITES
-  dependencies:
-    - create-ssh-key-pair
+  resource_group: prerequisites
   script:
     - echo "hi"
     # - sudo yum update -y && sudo yum install wget unzip -y
@@ -38,8 +38,7 @@ prerequisites-install:
 
 install_terraform:
   stage: PREREQUISITES
-  dependencies:
-    - prerequisites-install 
+  resource_group: prerequisites
   script:
     - export VER="0.13.0-beta3"
     - wget https://releases.hashicorp.com/terraform/${VER}/terraform_${VER}_linux_amd64.zip
@@ -53,6 +52,7 @@ install_terraform:
 
 build-gcp:
   stage: BUILD-INFRASTRUCTURE
+  resource_group: build
   script:
     - echo "" > ~/.ssh/known_hosts
     - terraform init
@@ -63,8 +63,7 @@ build-gcp:
 
 restart-sshd:
   stage: BUILD-INFRASTRUCTURE
-  dependencies:
-    - build-gcp
+  resource_group: build
   script:
     - pwd
     - export ANSIBLE_HOST_KEY_CHECKING=False
@@ -87,6 +86,7 @@ restart-sshd:
 
 ansible-ping-test:
   stage: CONFIG-ANSIBLE
+  resource_group: ansible
   retry:
     max: 2
     when:
@@ -101,8 +101,7 @@ ansible-ping-test:
 
 ansible-playbooks:
   stage: CONFIG-ANSIBLE
-  dependencies:
-    - ansible-ping-test
+  resource_group: ansible
   retry:
     max: 2
     when:
@@ -119,6 +118,7 @@ ansible-playbooks:
 
 install-node-exporter:
   stage: MONITORING
+  resource_group: monitoring
   script:
     - ansible-playbook ./ansible-playbooks/node_exporter/install_node_exporter.yaml
   tags:
@@ -126,8 +126,7 @@ install-node-exporter:
 
 install-prometheus:
   stage: MONITORING
-  dependencies:
-    - install-node-exporter 
+  resource_group: monitoring
   script:
     - echo "Installing Prometheus"
     - ansible-playbook ./ansible-playbooks/prometheus/install_prometheus.yaml
@@ -136,8 +135,7 @@ install-prometheus:
 
 install-grafana:
   stage: MONITORING
-  dependencies:
-    - install-prometheus  
+  resource_group: monitoring
   script:
     - ansible-playbook ./ansible-playbooks/grafana/install_grafana.yaml
   tags:
