--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,8 +32,7 @@ z-prerequisites:
     - echo "hi"
     # - sudo yum update -y && sudo yum install wget unzip -y
     - yum update --exclude=google-cloud-sdk -y && sudo yum install wget unzip -y
-  needs:
-    - create-ssh-key-pair
+  needs: ["create-ssh-key-pair"]
   tags:
     - banuka-gcp
 
@@ -48,8 +47,7 @@ install-terraform:
     - pwd
     - rm -rf terraform_${VER}_linux_amd64.zip
     - which terraform
-  needs:
-    - z-prerequisites
+  needs: ["z-prerequisites"]
   tags:
     - banuka-gcp
 
