--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,8 +93,8 @@ a-ansible-ping-test:
   script:
     - ansible -m ping all
     - ls
-  when: delayed
-  start_in: 55 seconds
+  # when: delayed
+  # start_in: 55 seconds
   tags:
     - banuka-gcp
 
@@ -107,11 +107,11 @@ b-ansible-playbooks:
       - always
   script:
     - echo "ansible playbooks"
-    # - ansible-playbook ./ansible-playbooks/kubernetes/master_and_minions.yaml
-    # - ansible-playbook ./ansible-playbooks/kubernetes/master.yaml
-    # - ansible-playbook ./ansible-playbooks/kubernetes/join_master_and_hosts.yaml
-  when: delayed
-  start_in: 59 seconds
+    - ansible-playbook ./ansible-playbooks/kubernetes/master_and_minions.yaml
+    - ansible-playbook ./ansible-playbooks/kubernetes/master.yaml
+    - ansible-playbook ./ansible-playbooks/kubernetes/join_master_and_hosts.yaml
+  # when: delayed
+  # start_in: 59 seconds
   tags:
     - banuka-gcp
 
@@ -120,7 +120,7 @@ a-node-exporter:
   resource_group: monitoring
   script:
     - echo "Installing node_exporter"  
-    # - ansible-playbook ./ansible-playbooks/node_exporter/install_node_exporter.yaml
+    - ansible-playbook ./ansible-playbooks/node_exporter/install_node_exporter.yaml
   tags:
     - banuka-gcp
 
@@ -129,7 +129,7 @@ b-prometheus:
   resource_group: monitoring
   script:
     - echo "Installing Prometheus"
-    # - ansible-playbook ./ansible-playbooks/prometheus/install_prometheus.yaml
+    - ansible-playbook ./ansible-playbooks/prometheus/install_prometheus.yaml
   tags:
     - banuka-gcp
 
@@ -138,7 +138,7 @@ c-grafana:
   resource_group: monitoring
   script:
     - echo "Installing grafana"  
-    # - ansible-playbook ./ansible-playbooks/grafana/install_grafana.yaml
+    - ansible-playbook ./ansible-playbooks/grafana/install_grafana.yaml
   tags:
     - banuka-gcp
 
