--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,8 +93,8 @@ a-ansible-ping-test:
   script:
     - ansible -m ping all
     - ls
-  # when: delayed
-  # start_in: 55 seconds
+  when: delayed
+  start_in: 55 seconds
   tags:
     - banuka-gcp
 
@@ -106,12 +106,21 @@ b-ansible-playbooks:
     when:
       - always
   script:
-    - echo "ansible playbooks"
+    - echo "ansible playbooks"  
     - ansible-playbook ./ansible-playbooks/kubernetes/master_and_minions.yaml
     - ansible-playbook ./ansible-playbooks/kubernetes/master.yaml
     - ansible-playbook ./ansible-playbooks/kubernetes/join_master_and_hosts.yaml
-  # when: delayed
-  # start_in: 59 seconds
+  when: delayed
+  start_in: 59 seconds
+  only:
+    refs:
+      - branches
+    changes:
+      - ansible-playbooks/kubernetes/*    
+      # - Dockerfile
+      # - docker/scripts/*
+      # - dockerfiles/**/*
+      # - more_scripts/*.{rb,py,sh}  
   tags:
     - banuka-gcp
 
