--- a/ansible-playbooks/helm/install_helm.yaml
+++ b/ansible-playbooks/helm/install_helm.yaml
@@ -3,7 +3,7 @@
   tasks:
     - name: Helm
       get_url:
-        url: curl -fsSL -o get_helm.sh https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3
+        url: "https://raw.githubusercontent.com/helm/helm/master/scripts/get-helm-3"
         dest: /root
         mode: "700"
 
